manifests/deployment.eventhub.identityserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volosoft-eventhub-identityserver-deployment
spec:
  selector:
    matchLabels:
      app: volosoft-eventhub-identityserver-pod
  template:
    metadata:
      labels:
        app: volosoft-eventhub-identityserver-pod
    spec:
      containers:
      - name: volosoft-eventhub-identityserver-container
        image: voloeventhubidentityserver.azurecr.io/voloeventhubidentityserver:v1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5001
