manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volosoft-eventhub-web-deployment
spec:
  selector:
    matchLabels:
      app: volosoft-eventhub-web-pod
  template:
    metadata:
      labels:
        app: volosoft-eventhub-web-pod
    spec:
      containers:
      - name: volosoft-eventhub-web-container
        image: voloeventhub.azurecr.io/voloeventhub:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
