manifests/service.eventhub.admin.yml
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app: admin
  ports:
   - port: 80
     targetPort: 80
  type: ClusterIP
