manifests/service.eventhub.httpapi.host.yml
apiVersion: v1
kind: Service
metadata:
  name: volosoft-eventhub-httpapi-host-service
spec:
  selector:
    app: volosoft-eventhub-httpapi-host-pod
  ports:
   - port: 80
     targetPort: 80
  type: ClusterIP
