manifests/service.eventhub.identityserver.yml
apiVersion: v1
kind: Service
metadata:
  name: volosoft-eventhub-identityserver-service
spec:
  selector:
    app: volosoft-eventhub-identityserver-pod
  ports:
  - port: 5001
    targetPort: 80
  type: LoadBalancer
