manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: voloeventhubidentityserver
spec:
    type: LoadBalancer
    ports:
    - port: 5001 
    selector:
        app: voloeventhubidentityserver
