manifests/eventhub.admin.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - admin.openeventhub.com
      secretName: admin-tls
  rules:
  - host: admin.openeventhub.com
    http:
      paths:
      - backend:
          service:
            name: admin
            port: 
              number: 80
        path: /
        pathType: Prefix
