manifests/eventhub.identityserver.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identityserver
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - identityserver.eventhub.gokhansengun.com
      secretName: identityserver-tls
  rules:
  - host: identityserver.eventhub.gokhansengun.com
    http:
      paths:
      - backend:
          service:
            name: identityserver
            port: 
              number: 80
        path: /
        pathType: Prefix
