manifests/eventhub.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.eventhub.gokhansengun.com
      secretName: web-tls
  rules:
  - host: web.eventhub.gokhansengun.com
    http:
      paths:
      - backend:
          service:
            name: web
            port: 
              number: 80
        path: /
        pathType: Prefix
